# addons-profile-manager

./: .gitignore  FIX_REPORT.md  Guia menu.md  LICENSE  README.md  pyproject.toml  test_manual.py
.agents/: python-pro.md
src/addons_profile_manager/: __init__.py  __main__.py  cli.py
src/addons_profile_manager/config/: __init__.py  constants.py  settings.py
src/addons_profile_manager/core/: __init__.py  backup.py  scanner.py
src/addons_profile_manager/utils/: __init__.py  exceptions.py  file_ops.py  logger.py
tests/: conftest.py
tests/integration/: test_workflow.py
tests/unit/: test_backup.py  test_config.py  test_scanner.py
